# primesThreading

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.rs  miller_rabin.rs  slow.rs
src/: CMakeLists.txt  README.md  primeN  primeN.cpp  primeT.cpp  prime_miller.cc  prime_miller.rs  prime_normal.cc
